feat: 更新数据库，更新文案

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,14 +1,14 @@
 ﻿NODE_ENV=production
 PORT=3000
 API_PREFIX=api/v1
-DB_HOST=prod-db.chaogu.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_USERNAME=chaogu_prod
-DB_PASSWORD=CHANGE_THIS_PRODUCTION_PASSWORD
-DB_DATABASE=chaogu_prod
-JWT_SECRET=CHANGE_THIS_PRODUCTION_JWT_SECRET_KEY_MUST_BE_VERY_SECURE
-JWT_EXPIRES_IN=1h
-CORS_ORIGIN=https://chaogu.com,https://www.chaogu.com
+DB_USERNAME=find_value_user
+DB_PASSWORD=FindValue123
+DB_DATABASE=find_value
+JWT_SECRET=QuantAI_JWT_SECRET_2024_VERY_SECURE_KEY_FOR_PRODUCTION
+JWT_EXPIRES_IN=24h
+CORS_ORIGIN=https://www.inhandle.com,https://inhandle.com
 THROTTLE_TTL=60
 THROTTLE_LIMIT=20
 LOG_LEVEL=error
@@ -18,14 +18,14 @@ CACHE_MAX=10000
 ENABLE_SWAGGER=false
 ENABLE_DEBUG=false
 ENABLE_TEST_DATA=false
-MAIL_HOST=smtp.chaogu.com
+MAIL_HOST=smtp.qq.com
 MAIL_PORT=587
-MAIL_USER=noreply@chaogu.com
-MAIL_PASS=CHANGE_THIS_PRODUCTION_MAIL_PASSWORD
-SSL_ENABLED=true
-SSL_CERT_PATH=/etc/ssl/certs/chaogu.crt
-SSL_KEY_PATH=/etc/ssl/private/chaogu.key
-SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+MAIL_USER=noreply@inhandle.com
+MAIL_PASS=CHANGE_THIS_MAIL_PASSWORD
+SSL_ENABLED=false
+SSL_CERT_PATH=/www/server/panel/vhost/cert/inhandle.com/fullchain.pem
+SSL_KEY_PATH=/www/server/panel/vhost/cert/inhandle.com/privkey.pem
+SENTRY_DSN=
 HEALTH_CHECK_ENDPOINT=/health
 MAX_REQUEST_SIZE=10mb
 REQUEST_TIMEOUT=300000
