--- a/project/.env.production
+++ b/project/.env.production
@@ -1,8 +1,9 @@
 ﻿VITE_APP_ENV=production
-VITE_APP_TITLE=智能策略回测平台
+VITE_APP_TITLE=FindValue
 VITE_APP_VERSION=1.0.0
-VITE_APP_DESCRIPTION=智能策略回测平台
-VITE_API_BASE_URL=https://api.chaogu.com/api/v1
+VITE_APP_DESCRIPTION=Find your edge. Find your alpha. FindValue.
+VITE_API_BASE_URL=https://www.inhandle.com
+VITE_API_PREFIX=/api/v1
 VITE_API_TIMEOUT=120000
 VITE_API_RETRY_COUNT=1
 VITE_DEV_PORT=5175
@@ -29,8 +30,8 @@ VITE_SHOW_PERFORMANCE=false
 VITE_ENABLE_COMPRESSION=true
 VITE_CHUNK_SIZE_LIMIT=1000
 VITE_PRELOAD_LINKS=true
-VITE_APP_KEYWORDS=量化交易,策略回测,股票分析,投资平台
-VITE_APP_AUTHOR=ChaoGu Team
-VITE_APP_URL=https://chaogu.com
-VITE_CDN_URL=https://cdn.chaogu.com
-VITE_ASSETS_URL=https://assets.chaogu.com
+VITE_APP_KEYWORDS=量化交易,策略回测,股票分析,投资平台,FindValue,发现价值,alpha,edge
+VITE_APP_AUTHOR=FindValue Team
+VITE_APP_URL=https://www.inhandle.com
+VITE_CDN_URL=https://www.inhandle.com/static
+VITE_ASSETS_URL=https://www.inhandle.com/assets
