--- a/project/package.json
+++ b/project/package.json
@@ -32,8 +32,10 @@
     "lucide-react": "^0.344.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0"
   },
