--- a/python-analysis-service/requirements.txt
+++ b/python-analysis-service/requirements.txt
@@ -1,22 +1,31 @@
+# 核心Web框架
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.9.0
+
+# HTTP客户端
 httpx==0.25.0
 requests==2.31.0
+
+# 数据处理
 pandas==2.2.3
 numpy==2.2.0
-scikit-learn>=1.4.0
-sentence-transformers==2.2.2
-jieba==0.42.1
+
+# AI服务
 dashscope==1.20.0
+
+# 环境配置
 python-dotenv==1.0.0
-aiofiles==23.2.0
-gensim==4.3.2
-zhon==1.1.5
 
 # 数据库相关
-sqlalchemy==2.0.23
+sqlalchemy>=2.0.32
 pymysql==1.1.0
 
-# 缓存相关
-redis==5.0.1
+# 认证相关
+bcrypt==4.0.1
+PyJWT==2.8.0
+email-validator==2.1.0
+
+# 文件处理
+Pillow>=11.0.0
+python-multipart==0.0.6
