--- a/project/.env.development
+++ b/project/.env.development
@@ -6,6 +6,7 @@ VITE_APP_DESCRIPTION=智能策略回测平台 - 开发环境
 
 # API配置
 VITE_API_BASE_URL=http://172.35.65.28:3001
+VITE_PYTHON_API_BASE_URL=http://localhost:8000
 VITE_API_PREFIX=/api/v1
 VITE_API_TIMEOUT=120000
 VITE_API_RETRY_COUNT=3
