--- a/project/.env.test
+++ b/project/.env.test
@@ -6,8 +6,10 @@ VITE_APP_DESCRIPTION=智能策略回测平台 - 测试环境
 
 # API配置
 VITE_API_BASE_URL=http://localhost:3002
-VITE_API_TIMEOUT=120000
+VITE_PYTHON_API_TIMEOUT=120000
+VITE_API_PREFIX=/api/v1
 VITE_API_RETRY_COUNT=2
+VITE_PYTHON_API_BASE_URL=http://localhost:8000
 
 # 开发配置
 VITE_DEV_PORT=5174
