--- a/nginx.conf
+++ b/nginx.conf
@@ -77,7 +77,7 @@ server {
         proxy_read_timeout 60s;
     }
     
-    # Python 分析服务代理
+    # Python 分析服务代理（支持SSE）
     location /python-api/ {
         proxy_pass http://127.0.0.1:8000/;
         proxy_http_version 1.1;
@@ -88,9 +88,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        # SSE 关键：关闭代理缓冲与压缩，保持即时推送
+        proxy_buffering off;
+        gzip off;
+        # 较长读超时以支持长会话
         proxy_connect_timeout 120s;
         proxy_send_timeout 120s;
-        proxy_read_timeout 120s;
+        proxy_read_timeout 600s;
     }
     
     # 健康检查
