--- a/project/package.json
+++ b/project/package.json
@@ -29,15 +29,20 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.4",
+    "@types/hast": "^3.0.4",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.344.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.3",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
