--- a/project/package.json
+++ b/project/package.json
@@ -37,12 +37,14 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0",
     "rehype-highlight": "^7.0.2",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "tui-grid": "^4.21.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
