--- a/project/.env.test
+++ b/project/.env.test
@@ -48,3 +48,5 @@ VITE_SHOW_PERFORMANCE=false
 VITE_TEST_MODE=true
 VITE_TEST_API_DELAY=1000
 VITE_TEST_USER_EMAIL=test@chaogu.com
+
+VITE_LIVE_WS_URL=wss://ws.postman-echo.com/raw
