--- a/project/package.json
+++ b/project/package.json
@@ -30,7 +30,10 @@
   "dependencies": {
     "@types/axios": "^0.14.4",
     "@types/hast": "^3.0.4",
+    "echarts": "^5.5.0",
+    "echarts-for-react": "^3.0.2",
     "highlight.js": "^11.11.1",
+    "hls.js": "^1.6.11",
     "lucide-react": "^0.344.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
