--- a/project/.env.example
+++ b/project/.env.example
@@ -13,5 +13,4 @@ VITE_API_PREFIX=/api/v1
 # 构建配置
 VITE_BUILD_SOURCEMAP=true
 VITE_BUILD_DROP_CONSOLE=false
-
-VITE_LIVE_WS_URL=wss://ws.postman-echo.com/raw
+VITE_LIVE_WS_URL=wss://www.inhandle.com/python-api/ws/live
