--- a/project/.env.test
+++ b/project/.env.test
@@ -49,4 +49,4 @@ VITE_TEST_MODE=true
 VITE_TEST_API_DELAY=1000
 VITE_TEST_USER_EMAIL=test@chaogu.com
 
-VITE_LIVE_WS_URL=wss://ws.postman-echo.com/raw
+VITE_LIVE_WS_URL=/python-api/ws/live
