--- a/project/.env.development
+++ b/project/.env.development
@@ -43,4 +43,4 @@ VITE_THEME_SECONDARY=#722ed1
 VITE_DEBUG_MODE=true
 VITE_LOG_LEVEL=debug
 VITE_SHOW_PERFORMANCE=true
-VITE_LIVE_WS_URL=/python-api/ws/live
+VITE_LIVE_WS_URL=ws://127.0.0.1:8000/ws/live
