--- a/findvalue/package.json
+++ b/findvalue/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "axios": "^1.12.2",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "react": "18.2.0",
