--- a/findvalue/package.json
+++ b/findvalue/package.json
@@ -3,11 +3,47 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "node scripts/run-with-env.js prod android",
+    "ios": "node scripts/run-with-env.js prod ios",
     "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "start": "node scripts/start-with-env.js prod",
+    "test": "jest",
+    "start:dev": "node scripts/start-with-env.js dev",
+    "start:test": "node scripts/start-with-env.js test",
+    "start:staging": "node scripts/start-with-env.js staging",
+    "start:prod": "node scripts/start-with-env.js prod",
+    "android:dev": "node scripts/run-with-env.js dev android",
+    "android:test": "node scripts/run-with-env.js test android",
+    "android:staging": "node scripts/run-with-env.js staging android",
+    "android:prod": "node scripts/run-with-env.js prod android",
+    "ios:dev": "node scripts/run-with-env.js dev ios",
+    "ios:test": "node scripts/run-with-env.js test ios",
+    "ios:staging": "node scripts/run-with-env.js staging ios",
+    "ios:prod": "node scripts/run-with-env.js prod ios",
+    "build:android:dev": "node scripts/run-with-env.js dev android build",
+    "build:android:test": "node scripts/run-with-env.js test android build",
+    "build:android:staging": "node scripts/run-with-env.js staging android build",
+    "build:android:prod": "node scripts/run-with-env.js prod android build",
+    "build:ios:dev": "node scripts/run-with-env.js dev ios build",
+    "build:ios:test": "node scripts/run-with-env.js test ios build",
+    "build:ios:staging": "node scripts/run-with-env.js staging ios build",
+    "build:ios:prod": "node scripts/run-with-env.js prod ios build",
+    "build:all:android": "npm run build:android:dev && npm run build:android:test && npm run build:android:staging && npm run build:android:prod",
+    "build:all:ios": "npm run build:ios:dev && npm run build:ios:test && npm run build:ios:staging && npm run build:ios:prod",
+    "build:all": "npm run build:all:android && npm run build:all:ios",
+    "build:script": "node scripts/build-all.js",
+    "build:script:android": "node scripts/build-all.js android",
+    "build:script:ios": "node scripts/build-all.js ios",
+    "clean": "react-native clean",
+    "clean:android": "cd android && ./gradlew clean",
+    "clean:ios": "cd ios && xcodebuild clean",
+    "reset-cache": "react-native start --reset-cache",
+    "postinstall": "cd ios && pod install",
+    "check:prod": "node scripts/check-prod-config.js",
+    "prebuild:android:prod": "npm run check:prod",
+    "prebuild:ios:prod": "npm run check:prod",
+    "generate:keystore": "node scripts/generate-keystore.js",
+    "generate:icons": "node scripts/generate-icons-node.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -22,7 +58,8 @@
     "react-native-gesture-handler": "^2.20.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-splash-screen": "^3.3.0",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,6 +72,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
