--- a/findvalue/.gitignore
+++ b/findvalue/.gitignore
@@ -72,3 +72,8 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Android keystore files
+android/app/*.keystore
+android/app/keystore-info.json
+android/app/release.keystore
